--- a/rpa-certificates-of-free-sale/Data Workflows/FileExplorer/MoveToReferenceFolder.xaml
+++ b/rpa-certificates-of-free-sale/Data Workflows/FileExplorer/MoveToReferenceFolder.xaml
@@ -35,7 +35,7 @@
     </scg:List>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
-    <scg:List x:TypeArguments="AssemblyReference" Capacity="16">
+    <scg:List x:TypeArguments="AssemblyReference" Capacity="32">
       <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
@@ -52,6 +52,11 @@
       <AssemblyReference>System.Xaml</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities</AssemblyReference>
       <AssemblyReference>UiPath.UiAutomation.Activities</AssemblyReference>
+      <AssemblyReference>System.ValueTuple</AssemblyReference>
+      <AssemblyReference>UiPath.Excel</AssemblyReference>
+      <AssemblyReference>UiPath.Mail</AssemblyReference>
+      <AssemblyReference>UiPath.CV</AssemblyReference>
+      <AssemblyReference>System.ServiceModel</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Flowchart DisplayName="MoveToReferenceFolder" sap:VirtualizedContainerService.HintSize="634,636" sap2010:WorkflowViewState.IdRef="Flowchart_1">
@@ -161,7 +166,7 @@
                       <av:PointCollection x:Key="ConnectorLocation">290,193.5 290,249.5</av:PointCollection>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <Sequence DisplayName="Create Reference Folder" sap:VirtualizedContainerService.HintSize="526,649" sap2010:WorkflowViewState.IdRef="Sequence_3">
+                  <Sequence DisplayName="Create Reference Folder" sap:VirtualizedContainerService.HintSize="621,649" sap2010:WorkflowViewState.IdRef="Sequence_3">
                     <Sequence.Variables>
                       <Variable x:TypeArguments="x:Boolean" Name="boolRefFolderExists" />
                     </Sequence.Variables>
@@ -170,29 +175,32 @@
                         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
-                    <Assign DisplayName="Assign Reference Folder Path" sap:VirtualizedContainerService.HintSize="484,60" sap2010:WorkflowViewState.IdRef="Assign_5">
+                    <Assign DisplayName="Assign Reference Folder Path" sap:VirtualizedContainerService.HintSize="579,60" sap2010:WorkflowViewState.IdRef="Assign_6">
                       <Assign.To>
                         <OutArgument x:TypeArguments="x:String">[OUT_strRefFolderPath]</OutArgument>
                       </Assign.To>
                       <Assign.Value>
-                        <InArgument x:TypeArguments="x:String">[IN_dictConfig("EmailApplicationsFolder") + today.Year.ToString + "\" + today.Month.ToString + " " + today.Date.ToString("MMMM") + "\" + today.date.ToString("dd.MM.yyyy") + "\" + IN_strReferenceNumber + "\"]</InArgument>
+                        <InArgument x:TypeArguments="x:String">[IN_dictConfig("EmailApplicationsFolder") + today.Year.ToString + "\" + today.Month.ToString + " " + today.Date.ToString("MMMM") + "\" + today.date.ToString("dd.MM.yyyy") + "\" + IN_strReferenceNumber + " RBT" + "\"]</InArgument>
                       </Assign.Value>
                     </Assign>
-                    <WriteLine DisplayName="Write Line - strRefFolderPath" sap:VirtualizedContainerService.HintSize="484,61" sap2010:WorkflowViewState.IdRef="WriteLine_7" Text="[OUT_strRefFolderPath]">
+                    <WriteLine DisplayName="Write Line - strRefFolderPath" sap:VirtualizedContainerService.HintSize="579,61" sap2010:WorkflowViewState.IdRef="WriteLine_7" Text="[OUT_strRefFolderPath]">
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
                           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
                     </WriteLine>
-                    <ui:PathExists DisplayName="Path Exists - Reference Folder" Exists="[boolRefFolderExists]" sap:VirtualizedContainerService.HintSize="484,89" sap2010:WorkflowViewState.IdRef="PathExists_2" Path="[OUT_strRefFolderPath]" PathType="Folder">
+                    <ui:PathExists DisplayName="Path Exists - Reference Folder" Exists="[boolRefFolderExists]" sap:VirtualizedContainerService.HintSize="579,89" sap2010:WorkflowViewState.IdRef="PathExists_2" Path="[OUT_strRefFolderPath]" PathType="Folder">
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
                           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
                     </ui:PathExists>
-                    <If Condition="[boolRefFolderExists]" DisplayName="Create Reference Folder " sap:VirtualizedContainerService.HintSize="484,227" sap2010:WorkflowViewState.IdRef="If_1">
+                    <If Condition="[boolRefFolderExists]" DisplayName="Create Reference Folder " sap:VirtualizedContainerService.HintSize="579,227" sap2010:WorkflowViewState.IdRef="If_1">
+                      <If.Then>
+                        <Throw Exception="[new BusinessRuleException(&quot;TRD reference folder already exists&quot;)]" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="Throw_1" />
+                      </If.Then>
                       <If.Else>
                         <ui:CreateDirectory ContinueOnError="{x:Null}" DisplayName="Create Folder" sap:VirtualizedContainerService.HintSize="334,79" sap2010:WorkflowViewState.IdRef="CreateDirectory_2" Path="[OUT_strRefFolderPath]" />
                       </If.Else>
